# gelcorp-launcher

./: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: .prettierrc.toml  App.svelte  ConsoleTab.svelte  LoginPage.svelte  MainPage.svelte  main.ts  styles.css  tauriUtils.ts
src-tauri/: .env.example  Cargo.toml  build.rs  log4rs.yaml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  forge.rs  game_status.rs  java.rs  log_flusher.rs  logger.rs  main.rs  msa_auth.rs
src-tauri/src/app/: error.rs  game.rs  game_status.rs  gui.rs  mod.rs  msa_auth.rs  state.rs
src-tauri/src/config/: auth.rs  mod.rs  mojang_api_helper.rs
src-tauri/src/modpack_downloader/: mod.rs
src-tauri/src/modpack_downloader/keys/: mod.rs
src/components/: AlertBoxLayout.svelte  LauncherTabs.svelte  Logs.svelte  RamSlider.svelte
src/components/tab/: ConfigTab.svelte  GameLogsTab.svelte  LauncherLogsTab.svelte  UpdateNotesTab.svelte
src/ipc/: auth.ts  game.ts
src/ipc/stores/: game_status.ts  launcher_config.ts  loggers.ts  modpack_info.ts  progress.ts  system_info.ts
src/lib/: LauncherTabs.svelte  Logs.svelte  ProgressBar.svelte
src/lib/tab/: GameLogsTab.svelte  LauncherLogsTab.svelte  UpdateNotesTab.svelte
src/pages/: LoginPage.svelte  MainPage.svelte  UpdatePage.svelte
src/stores/: launcher_config.ts  loggers.ts
