[package]
name = "minecraft-launcher"
version = "1.0.0"
description = "Gelcorp Launcher"
authors = ["MonkeyKiller"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
uuid = { version = "1.6.1", features = ["v3"] }
reqwest = "0.11.22"
sha1 = "0.10.6"
hex = "0.4.3"
tokio = { version = "1.34.0", features = ["full"] }
minecraft-msa-auth = "0.3.0"
oauth2 = "4.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
thiserror = "1.0.50"
derive_builder = "0.12.0"
zip = "0.6.6"
os_info = "3.7.0"
async-recursion = "1.0.5"
forge-downloader = { path = "../../forge-downloader" }
minecraft-launcher-core = { path = "../../minecraft-launcher-core" } # { git = "ssh://git@github.com/MMonkeyKiller/mclc-rust.git"}
log4rs = "1.2.0"
log = "0.4.20"
anyhow = "1.0.79"
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
