[package]
name = "gelcorp-launcher"
version = "1.0.3"
description = "Gelcorp Launcher"
authors = ["MonkeyKiller"]
license = ""
repository = ""
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
dotenv-build = "0.1.1"

[dependencies]
tauri = { version = "1.5", features = ["updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
uuid = { version = "1.6.1", features = ["v3"], default-features = false }
reqwest = "0.11.22"
sha1 = "0.10.6"
hex = { version = "0.4.3", features = ["serde"] }
tokio = { version = "1.34.0", features = ["full"] }
minecraft-msa-auth = "0.3.0"
oauth2 = "4.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
thiserror = "1.0.50"
derive_builder = "0.12.0"
zip = "0.6.6"
async-recursion = "1.0.5"
forge-downloader = { git = "https://github.com/Gelcorp/forge-downloader.git" } # { path = "../../forge-downloader" }
minecraft-launcher-core = { git = "https://github.com/Gelcorp/minecraft-launcher-core.git", version = "1.0.0" } # { path = "../../minecraft-launcher-core" }
gelcorp-modpack = { git = "https://github.com/Gelcorp/gelcorp-modpack.git", default-features = false, features = [
  "install",
] }
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.20"
anyhow = "1.0.79"
once_cell = "1.19.0"
rsa = { version = "0.9.6", features = ["sha2"] }
cbc = "0.1.2"
aes = "0.8.3"
sysinfo = "0.30.5"
flate2 = "1.0.28"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
